# ChangeLog for gnome-base/gnome-keyring
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-keyring/ChangeLog,v 1.120 2008/04/07 20:34:10 eva Exp $

*gnome-keyring-2.22.1 (07 Apr 2008)

  07 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-keyring-2.22.1.ebuild:
  bump to 2.22.1. Build fixes and ssh-agent is now optional (but no USE flag
  for that)

  31 Mar 2008; <ricmm@gentoo.org> gnome-keyring-0.8.1.ebuild:
  Drop to ~mips due to unstable deps

*gnome-keyring-2.22.0-r2 (23 Mar 2008)

  23 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-keyring-2.22.0-r2.ebuild:
  New version for GNOME-2.22. Features an SSH agent, adds support for X.509
  certificates and key store and a PKCS#11 module for accessing them.

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> gnome-keyring-2.20.3.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  gnome-keyring-2.20.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-keyring-2.20.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> gnome-keyring-2.20.3.ebuild:
  Marking gnome-keyring-2.20.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome-keyring-2.20.3.ebuild:
  stable x86, bug 208366

*gnome-keyring-2.20.3 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-keyring-2.20.3.ebuild:
  bump to 2.20.3

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gnome-keyring-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org>
  gnome-keyring-2.20.1.ebuild:
  Stable on ppc64; bug #199740

*gnome-keyring-2.20.2 (25 Nov 2007)

  25 Nov 2007; Mart Raudsepp <leio@gentoo.org> +gnome-keyring-2.20.2.ebuild:
  Version bump

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gnome-keyring-2.20.1.ebuild: