@@ -1,25 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-keyring/gnome-keyring-0.8.1.ebuild,v 1.11 2008/03/31 04:32:04 ricmm Exp $
-
-EAPI="prefix"
-
-inherit gnome2 eutils
-
-DESCRIPTION="Password and keyring managing daemon"
-HOMEPAGE="http://www.gnome.org/"
-
-LICENSE="GPL-2 LGPL-2"
-SLOT="0"
-KEYWORDS="~amd64-linux ~ia64-linux ~mips-linux ~x86-linux"
-IUSE=""
-
-RDEPEND=">=dev-libs/glib-2.6
-		>=x11-libs/gtk+-2.6
-		>=sys-apps/dbus-1.0"
-DEPEND="${RDEPEND}
-		sys-devel/gettext
-		>=dev-util/intltool-0.35
-		>=dev-util/pkgconfig-0.9"
-
-DOCS="AUTHORS ChangeLog NEWS README TODO"
